# auth

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  private_key.pem  public_key.pem  pyproject.toml  requirements.txt
app/: main.py
app/config/: settings.py
app/controller/: token_controller.py  user_controller.py
app/db/: connection.py  dbmate.py  tortoise_config.py
app/db/dao/: __init__.py  session_dao.py  user_dao.py
app/db/models/: __init__.py  session_model.py  user_model.py
app/exceptions/: __init__.py
app/resources/: api.py  middleware.py  on_event.py
app/schema/requests/: token_schema.py  user_schema.py
app/services/: password_service.py  token_service.py  user_service.py
