[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["aryant <aryantpratapsingh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.99.0"
uvicorn = { version = "0.23.2", extras = ["standard"] }
python-dotenv = "1.0.0"
pyjwt = { version = "2.8.0", extras = ["crypto"] }
python-multipart = "0.0.6"
yarl = "1.9.2"
psycopg = "3.1.12"
psycopg-binary = "3.1.12"
psycopg-pool = "3.1.8"
email-validator = "2.1.0.post1"
bcrypt = "4.0.1"
tortoise-orm = { version = "0.20.0", extras = ["asyncpg"] }
aerich = "0.7.2"
asyncpg = "0.28.0"





[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
